--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,8 +1,9 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>
       About
     </ion-title>
+    
   </ion-navbar>
 </ion-header>
 
