--- a/src/pages/jobinfo/jobinfo.html
+++ b/src/pages/jobinfo/jobinfo.html
@@ -10,7 +10,7 @@
     <ion-title>Job Information</ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
-        <ion-icon name="md-close" showWhen="android, windows" color="light"></ion-icon>
+        <ion-icon name="md-close" showWhen="android, windows" ></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
@@ -25,7 +25,8 @@
           {{data.jobtitle}}
         </ion-card-header>
         <ion-card-content>
-          Content here
+         <p>{{data.snippet}}</p>
+        <button ion-button color="danger" block>APPLY NOW</button>
         </ion-card-content>
       </ion-card>
   </div>
